# DeltaRho-Controller

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  FreeRTOS_Plus_TCP.cmake  FreeRTOS_coreMQTT-Agent.cmake  README.md
Tests/: ParserTest.cpp  ParserTest.h
lib/: ADC_Read.h  DCMotor.cpp  DCMotor.h  DC_Motor.cpp  DC_Motor.h  FreeRTOSConfig.h  I2C.c  I2C.cpp  I2C.h  I2C_Control.c  I2C_Control.h  MQTT_Client.cpp  MQTT_Client.h  MotorEncoder.cpp  Motor_Controller.cpp  Motor_Controller.h  PCA9685.h  Robot.cpp  Robot.h  Robot_Config.h  WIFI.c  WIFI.h  lwipopts.h  lwipopts_examples_common.h  micropython_wifi_connection_and_parser.py  wifi_config.h
lib/Hardware_Interface/: ADC_Read.c  PCA9685.h
lib/Mqtt_Config/: logging_config.h  mqtt_config.h  subscription_manager.c  subscription_manager.h
src/: InstructionParser.cpp  README.md  instruction_parser.h  main.cpp  mqtt_Connection.c  mqtt_Connection.h  mqtt_connection.c  mqtt_connection.cpp  mqtt_connection.h  multicore_management.c  multicore_management.cpp  multicore_management.h
src/wifi_connection/: connection.c  connection.cpp  connection.h  mqtt_connection.c  socket_connection.c  wifi_config.h
